--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/User/Downloads/mysql-connector-java-8.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Downloads/project-demo-backend.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -15,5 +14,9 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/project-demo-backend.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Downloads/commons-dbcp2-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Downloads/commons-pool2-2.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Downloads/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
